# YouShallNotPass

./: README.md  create-model.sh  pb-lvl4-mistral.modelfile
.github/workflows/: deploy.yml
api/: README.md  app.py  post_checks.py  pyproject.toml
api/core/: db.py  repository.py
api/features/levels/: schemas.py
api/features/models/: schemas.py
api/migrations/versions/: 599f2969c22e_adding_description_to_level.py  5c2b77c842b3_adding_post_check_in_model.py  951c848a9667_make_level_description_mandatory.py
levels/: pb-lvl3-mistral.modelfile  pb-lvl5-mistral.modelfile  pb-lvl6-mistral.modelfile  pb-lvl7-mistral.modelfile  pb-lvl8-mistral.modelfile  wildlife-specialist.modelfile
llm-backend/: alembic.ini  app.py  pyproject.toml  readme.md
llm-backend/features/levels/: repository.py  router.py  schemas.py
llm-backend/features/models/: repository.py  router.py  schemas.py
llm-backend/migrations/: env.py
llm-backend/migrations/versions/: 0e2fa5b9d01c_first_alembic_migration.py
models/: complotist.modelfile  no-instruction2.modelfile  phi3lvl1.modelfile  rewrite-prompt.modelfile  stupid.modelfile
models/levels/: lvl1.modelfile  lvl2.modelfile  lvl3.modelfile  lvl8.modelfile  pb-lvl6-mistral.modelfile
models/levels/assess/: README.md  prompts.json
passwordchecker/: Dockerfile  README.md  package.json
passwordchecker/src/: main.js
ui/: README.md  index.html  package-lock.json  package.json  tsconfig.json
ui/src/assets/css/: fonts.css  global.css
ui/src/components/: Task.tsx
ui/src/components/Header/: Header.tsx  HostInput.tsx  LevelSelect.tsx  ModelSelect.tsx
ui/src/components/common/: Button.tsx  ConversationDisplay.tsx  Layout.tsx  (+5 more)
ui/src/contexts/: app.context.tsx
ui/src/hooks/: useFaviconReplacement.ts  useMediaQuery.ts  useWindowSize.ts
ui/src/pages/: main.tsx
ui/src/styles/: theme.ts
ui/src/types/: levels.ts  styles.ts
ui/src/utils/: class.ts
(+8 files in other folders)
