[tool.poetry]
name = "llm-backend"
version = "0.1.0"
description = ""
authors = ["Elias Sebbar <elias@demisel.space>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
ollama = "^0.1.9"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
